--- a/ProjektOrdner/pom.xml
+++ b/ProjektOrdner/pom.xml
@@ -24,11 +24,24 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>Main</mainClass> <!--  name der Java Klasse -->
+							<mainClass>Main</mainClass> <!-- name der Java Klasse -->
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.8</version>
+		</dependency>
+
+
+	</dependencies>
+
+
 </project>
